--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-gesture-handler": "~1.6.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "yup": "^0.28.5",
-    "expo-secure-store": "~8.1.0"
+    "expo-secure-store": "~8.1.0",
+    "react-native-gesture-handler": "~1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
