--- a/app.json
+++ b/app.json
@@ -17,11 +17,11 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.codewithmosh.donewithit",
+      "bundleIdentifier": "com.vattsopheak.donewithit",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "com.codewithmosh.donewithit",
+      "package": "com.vattsopheak.donewithit",
       "versionCode": 1
     },
     "description": "A marketplace for selling the stuff you don't need anymore.",
